# fraud-detection-pipeine

./: .env.CLEANUP_WARNING  .gitignore  Makefile  PORTFOLIO_CLEANUP.md  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
docker/: Dockerfile.api  Dockerfile.training
docs/: API_ARCHITECTURE.md
examples/: predict_example.py
src/fraud_platform/: __init__.py  config.py  logging.py
src/fraud_platform/features/: build_features.py
src/fraud_platform/ingestion/: kaggle_download.py  load_raw.py
src/fraud_platform/monitoring/: __init__.py  drift_report.py  log_predictions.py  performance_report.py  retrain_trigger.py
src/fraud_platform/pipelines/: run_monitoring_pipeline.py  run_training_pipeline.py
src/fraud_platform/serving/: __init__.py  app.py  predict.py  schemas.py
src/fraud_platform/training/: __init__.py  evaluate.py  register_model.py  thresholding.py  train.py
src/fraud_platform/validation/: __init__.py  run_validation.py
tests/: __init__.py  test_smoke.py
